updated privatePolicy and legalnotice

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
 </head>
 
-<body onload="initBoard()">
+<body onload="initPrivatePolicy()">
     <header id="header">
     </header>
     <div id="smallMenu" class="smallMenu noDisplay">
@@ -83,7 +83,8 @@
     <script src="./javascript/summary.js"></script>
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
-    <script src="./javascript/board.js"></script>
+    <script src="./javascript/privatepolicy.js"></script>
+    <!-- <script src="./javascript/board.js"></script> -->
     <script src="./javascript/storage.js"></script>
     
 </body>
