--- a/legalnotice.html
+++ b/legalnotice.html
@@ -59,7 +59,7 @@
     <script src="./javascript/summary.js"></script>
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
-    <script src="/javascript/privatepolicy.js"></script>
+    <script src="./javascript/privatepolicy.js"></script>
     <script src="./javascript/storage.js"></script>
     
 </body>
