Fixed subtasks list

--- a/addtask.html
+++ b/addtask.html
@@ -113,7 +113,7 @@
                                     src="./img/addtask/addsubtask.svg" alt="">
                             </div>
                             <div>
-                                <ul id="subtaskList" class="subTaskList">
+                                <ul id="subtaskList" class="subtaskList">
                                 </ul>
                             </div>
                         </div>
