--- a/help.html
+++ b/help.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
 </head>
 
-<body onload="initBoard()">
+<body onload="initPrivatePolicy()">
     <header id="header">
     </header>
     <div id="smallMenu" class="smallMenu noDisplay">
@@ -68,7 +68,7 @@
     <script src="./javascript/summary.js"></script> 
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
-    <script src="./javascript/board.js"></script>
+    <script src="./javascript/privatepolicy.js"></script>
     <script src="./javascript/storage.js"></script>
     
 </body>
