--- a/board.html
+++ b/board.html
@@ -113,6 +113,8 @@
     <script src="./javascript/navbar.js"></script>
     <script src="./javascript/addtask.js"></script>
     <script src="./javascript/board.js"></script>
+    <script src="./javascript/boardAddTask.js"></script>
+    <script src="./javascript/templatesHTML.js"></script>
 
 
 
