--- a/addtask.html
+++ b/addtask.html
@@ -141,6 +141,7 @@
     <script src="./javascript/navbar.js"></script>
     <script src="./javascript/addtask.js"></script>
     <script src="./javascript/signup.js"></script>
+    <script src="./javascript/templatesHTML.js"></script>
 
 
 </body>
