moved the HTML code to the templatesHTML.js

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -85,6 +85,7 @@
     <script src="./javascript/navbar.js"></script>
     <script src="./javascript/privatepolicy.js"></script>
     <script src="./javascript/storage.js"></script>
+    <script src="./javascript/templatesHTML.js"></script>
     
 </body>
 
