--- a/contacts.html
+++ b/contacts.html
@@ -101,6 +101,7 @@
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
     <script src="./javascript/board.js"></script>
+    <script src="./javascript/templatesHTML.js"></script>
 </body>
 
 </html>
