--- a/help.html
+++ b/help.html
@@ -70,6 +70,7 @@
     <script src="./javascript/navbar.js"></script>
     <script src="./javascript/privatepolicy.js"></script>
     <script src="./javascript/storage.js"></script>
+    <script src="./javascript/templatesHTML.js"></script>
     
 </body>
 
