--- a/summary.html
+++ b/summary.html
@@ -92,6 +92,7 @@
     <script src="./javascript/signup.js"></script>
     <script src="./javascript/login.js"></script>
     <script src="./javascript/storage.js"></script>
+    <script src="./javascript/templatesHTML.js"></script>
 
 </body>
 
