--- a/board.html
+++ b/board.html
@@ -20,7 +20,7 @@
     <nav id="navbar">
     </nav>
     <div id="smallNav" class="smallNav" style="z-index: 100;"></div>
-    <main style="max-width: 1440px;">
+    <main style="max-width: 1440px;" id="main">
         <div class="boardHeading">
             <div class="boardPageHeading">
                 <div class="mobileBoardPageHeading">
